Quartz sync: Dec 7, 2024, 6:41 PM

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,6 +1,7 @@
 @use "./base.scss";
 
 // put your custom CSS here!
-h1.title, .page-title {
-    display: none;
-}
+
+// h1.title, .page-title {
+//     display: none;
+// }
