--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -2,6 +2,6 @@
 
 // put your custom CSS here!
 
-h1.title, .page-title {
-    display: none;
-}
+// h1.title, .page-title {
+//     display: none;
+// }
